--- a/contact.css
+++ b/contact.css
@@ -19,14 +19,14 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(21, 99, 167);
-    height: 100px;
+    background-color: black;
+    height: 80px;
 }
 
 .nav-links a {
   margin-right: 15px;
   text-decoration: none;
-  color: black;
+  color: white;
   font-weight: bold;
 }
 
@@ -37,8 +37,8 @@ header {
 header h1 {
     margin: 0;    
     font-size: 2.3rem;
-    text-shadow: 0 0 10px rgba(0,0,0,0.6);
-    color: black;
+    text-shadow: 0 0 10px rgb(249, 249, 249);
+    color: white;
 }
 .para {
     color: rgb(17, 17, 105);
@@ -130,7 +130,7 @@ button:hover {
 }
 
 #bottom {
-    background: rgb(21, 99, 167);
+    background: black;
     color: #fff;
     text-align: center;
     padding: 1rem;
