--- a/About.css
+++ b/About.css
@@ -26,8 +26,9 @@ header {
   font-weight: bold;
 }
 
+.nav-links a.active,
 .nav-links a:hover {
-  color: #007bff;
+  color: aqua;
 }
 
 header h1 {
@@ -47,6 +48,7 @@ section {
     margin-bottom: 2rem;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    color: #004080;
 }
 
 .homes {
@@ -64,7 +66,7 @@ section {
 }
 
 .home-card:hover {
-    transform: translateY(-5px);
+    transform: translateY(-10px);
 }
 
 .home-card img {
@@ -91,4 +93,31 @@ footer {
     text-align: center;
     padding: 1rem;
     margin-top: 2rem;
+}
+
+body {
+    background: #ffffff;
+    color: #222;
+    transition: background 0.3s, color 0.3s;
+}
+
+.dark-mode {
+    background: #1e1e1e;
+    color: #f5f5f5;
+}
+
+#theme-toggle {
+    padding: 10px 18px;
+    background: #0866ff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 6px;
+    margin: 10px;
+    font-size: 14px;
+    transition: 0.3s;
+}
+
+#theme-toggle:hover {
+    opacity: 0.8;
 }
