--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 .logo img {
-  width: 150px;
+  width: 140px;
   height: auto;
 } 
 
@@ -63,7 +63,7 @@ body {
 .hero {
   position: relative;
   height: 520px;
-  background: url("house4.jpg") center/cover no-repeat fixed;
+  background: url("house8.jpg") center/cover no-repeat fixed;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -240,18 +240,6 @@ body {
   color: #555;
 }
 
-.footer {
-  background: #222;
-  color: #ccc;
-  padding: 30px 50px;
-  text-align: center;
-}
-.footer p {
-  margin: 8px 0;
-  font-size: 14px;
-}
-
-
 @media (max-width: 768px) {
   .navbar {
     padding: 12px 18px;
@@ -311,20 +299,15 @@ body {
 }
 
 
-/* Smooth theme change */
 body {
     transition: background-color 0.3s, color 0.3s;
 }
 
-/* ===========================
-   DARK MODE COLORS
-   =========================== */
 body.dark {
     background-color: #121212;
     color: #e5e5e5;
 }
 
-/* Navbar Dark Mode */
 body.dark .navbar {
     background: #1e1e1e;
 }
@@ -333,7 +316,6 @@ body.dark .nav-links a {
     color: #e5e5e5;
 }
 
-/* Cards Dark Mode */
 body.dark .card,
 body.dark .service,
 body.dark .testi {
@@ -342,7 +324,6 @@ body.dark .testi {
     border: 1px solid #333;
 }
 
-/* Buttons */
 .theme-btn {
     padding: 8px 14px;
     background: #0866ff;
@@ -357,14 +338,19 @@ body.dark .testi {
     opacity: 0.8;
 }
 
-/* Dark Mode hero section */
 body.dark .hero {
     background: #000;
 }
 
-/* Dark Mode footer */
 body.dark .footer {
     background: #1e1e1e;
     color: #e5e5e5;
+}
+footer {
+    background: #2c3e50;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+    margin-top: 2rem;
 }
 
